prototypes/p5b/tests/invalid/24_spawn_non_service.hll
// INVALID: cannot spawn a struct — only services can be actors
module badspawn

struct Config {
    String name
}

function main() {
    let actor = spawn Config  // ERROR: Config is not a service
}
